# multi-agent-rag-lit-review

./: .gitignore  README.md  implementation_plan.md  multi_agent_architecture.md  pyproject.toml  requirements.txt  run_demo.py  test_backboard.py
agents/: aggregator.py  critic.py  query_expansion.py  screening.py  screening_council.py  section_writers.py  supervisor.py  web_search.py
backend/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
notebooks/: poc.ipynb
orchestration/: graph.py
rag/: embed.py  index.py  ingest.py  reranker.py  retriever.py
utils/: backboard_client.py  backboard_langchain.py  cache.py  evaluator.py  exporter.py
